[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ralph-runner"
version = "0.1.0"
description = "Outer-loop orchestrator for Claude Code — run iterative, self-improving coding sessions with automatic progress tracking, verification, and cost reporting."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "ralph-runner contributors" },
]
keywords = [
    "claude",
    "claude-code",
    "orchestrator",
    "outer-loop",
    "ai",
    "coding-agent",
    "automation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]

[project.scripts]
ralph-runner = "ralph_runner.cli:main"

[project.urls]
Homepage = "https://github.com/gzxultra/ralph-runner"
Repository = "https://github.com/gzxultra/ralph-runner"
Issues = "https://github.com/gzxultra/ralph-runner/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/ralph_runner"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
